--- a/Website/Style/Calendar.css
+++ b/Website/Style/Calendar.css
@@ -1,14 +1,21 @@
 #calendar-container {
-  padding: 0px;
-  width: 210px;
-  height: 210px;
+  padding: px;
+  width: 30%;
+  height: 50vh;
   text-align: center;
   border: 2px solid #eeeeee;
   border-radius: 10px;
-  font-size: 13px;
+  font-size: 35px;
   font-family: "Cinzel", serif;
   background-image: linear-gradient(rgb(161, 0, 0), #d3d3d3);
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 50px;
+  align-items: center;
+  position: absolute;
+  left: 35%;
 }
 
 #calendar-container > div {
