--- a/Website/style.css
+++ b/Website/style.css
@@ -1,5 +1,5 @@
 * {
-  padding: 1;
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
@@ -18,6 +18,8 @@ nav {
   text-transform: uppercase;
   letter-spacing: 5px;
   font-size: 20px;
+  display: flex;
+  text-align: left;
 }
 
 .nav-links {
@@ -34,6 +36,7 @@ nav {
   letter-spacing: 3px;
   font-weight: bold;
   font-size: 14px;
+  padding: 9px;
 }
 .burger {
   display: none;
@@ -49,43 +52,37 @@ nav {
 }
 #house,
 #adven,
-#goal {
+#goal,
+#char,
+#calen {
   cursor: pointer;
   padding: 0px;
   position: absolute;
   left: -22px;
 }
-#char {
-  left: -18px;
-  position: absolute;
-  cursor: pointer;
-}
-
 @media screen and (max-width: 3840px) {
   body {
     overflow-x: hidden;
   }
   .nav-links {
-    position: absolute;
     right: 0px;
-    height: 92vh;
+
     top: 8vh;
     background-color: rgb(39, 68, 52);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    width: 15%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-  }
-  .nav-links li {
-    opacity: 0;
-  }
-  .burger {
-    display: block;
   }
 }
 
+.bottom {
+  height: 20vh;
+  background-color: rgb(39, 68, 52);
+  flex-direction: row;
+  font-family: "Cinzel", serif;
+  color: rgb(243, 179, 245);
+  display: flex;
+}
 @media screen and (max-width: 768px) {
   body {
     overflow-x: hidden;
