--- a/Website/Style/img.css
+++ b/Website/Style/img.css
@@ -6,7 +6,12 @@
   height: 80vh;
   width: 100%;
 }
-
+#clain {
+  height: 300px;
+  width: 40%;
+  display: flex;
+  flex: 1;
+}
 @media screen and (max-width: 1000px) {
   #charimg,
   #goalimg,
