--- a/Website/style.css
+++ b/Website/style.css
@@ -128,6 +128,17 @@ nav {
   color: rgb(243, 179, 245);
 }
 
+.bottom .bottom-content .links h2 {
+  color: rgb(51, 2, 53);
+}
+
+.bottom .bottom-content .links a {
+  text-decoration: none;
+  color: rgb(243, 179, 245);
+  list-style: none;
+  font-size: 20px;
+}
+
 .bottom .bottom-bottom {
   background: rgb(28, 49, 38);
   height: 50px;
@@ -140,14 +151,62 @@ nav {
 }
 
 .bottom .bottom-content {
-  border: 1px solid red;
+  border: 1px rgb(28, 49, 38);
   height: 350px;
   display: flex;
 }
 
 .bottom .bottom-content .bottom-section {
   flex: 1;
-  border: 1px solid white;
+  border: 1px solid rgb(28, 49, 38);
+}
+
+.bottom .bottom-content .contact-form h2 {
+  color: rgb(51, 2, 53);
+}
+
+.bottom .bottom-content .contact-form form {
+  display: flex;
+  flex-direction: column;
+}
+
+.text-input_contact-input {
+  font-family: "Cinzel", serif;
+  height: 40px;
+  font-size: 20px;
+  background-color: whitesmoke;
+  color: rgb(59, 1, 61);
+}
+
+.text-input_message-input {
+  height: 80px;
+  font-family: "Cinzel", serif;
+  font-size: 15px;
+  color: rgb(59, 1, 61);
+}
+#btn-big {
+  height: 50px;
+  width: 50px;
+  font-family: "Cinzel", serif;
+  color: rgb(94, 13, 97);
+  display: inline-block;
+  border: 2px solid gray;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.entrance {
+  position: relative;
+  text-align: center;
+  color: rgb(255, 255, 255);
+}
+.center {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Cinzel", serif;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 800px) {
@@ -245,7 +304,7 @@ body {
   text-align: center;
   left: 10%;
   right: 10%;
-  height: 80vh;
+  height: 100vh;
 }
 
 .box2 {
@@ -254,5 +313,5 @@ body {
   text-align: center;
   left: 10%;
   right: 10%;
-  height: 80vh;
+  height: 100vh;
 }
