--- a/Website/Style/characters.css
+++ b/Website/Style/characters.css
@@ -6,7 +6,7 @@
   font-weight: 100;
 }
 .cBox1 {
-  background: whitesmoke;
+  background: white;
   font-family: sans-serif;
   text-align: center;
   left: 10%;
@@ -17,20 +17,38 @@
   border-image-outset: 10px;
 }
 
+.characterRow {
+  display: flex;
+  flex-direction: row;
+}
+
 .cVidar,
-.cPercy {
+.cPercy,
+.cMilfred,
+.cDominus {
   display: flex;
   flex: 1;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 #Vidar {
   height: 200px;
-  width: 20%;
+  width: 200px;
   margin: auto;
 }
 #Percy {
   height: 200px;
-  width: 10%;
+  width: 100px;
+  margin: auto;
+}
+#Milfred {
+  height: 200px;
+  width: 200px;
+  margin: auto;
+}
+
+#Dominus {
+  height: 200px;
+  width: 200px;
   margin: auto;
 }
