--- a/To-do List JS App/css/style.css
+++ b/To-do List JS App/css/style.css
@@ -227,12 +227,12 @@ ul.todo#completed li .buttons button.complete svg .fill {
   fill: #fff;
 }
 
-ul.todo#completed:not(:empty) {
+ul.todo#completed {
   padding: 60px 0 0 0;
   position: relative;
 }
 
-ul.todo#completed:not(:empty):before {
+ul.todo#completed:before {
   width: 150px;
   height: 1px;
   background: #d8d8d8;
@@ -241,4 +241,22 @@ ul.todo#completed:not(:empty):before {
   top: 30px;
   left: 50%;
   margin: 0 0 0 -75px;
+}
+
+ul.todo#todo:empty:after {
+  content: "You have yet to register any tasks.";
+}
+
+ul.todo#completed:empty:after {
+  content: "You have yet to complete any tasks.";
+}
+
+ul.todo#todo:after,
+ul.todo#completed:after {
+  width: 100%;
+  display: block;
+  text-align: center;
+  font-size: 12px;
+  color: #aaa;
+  text-decoration: underline;
 }
