--- a/Shopping cart comfy house JS/styles.css
+++ b/Shopping cart comfy house JS/styles.css
@@ -165,7 +165,6 @@ body {
 }
 
 /* ---------------End of Products ---------------- */
-
 /* --------------- Cart ---------------- */
 .cart-overlay {
   position: fixed;
@@ -176,7 +175,7 @@ body {
   transition: var(--mainTransition);
   background: rgb(240, 157, 81, 0.5);
   z-index: 2;
-  /*visibility: hidden;*/
+  visibility: hidden;
 }
 .cart {
   position: fixed;
@@ -189,7 +188,7 @@ body {
   background: rgb(231, 226, 221);
   padding: 1.5rem;
   transition: var(--mainTransition);
-  /*transform: translateX(100%);*/
+  transform: translateX(100%);
 }
 .showCart {
   transform: translateX(0);
